--- a/app/views/chatgpt/index.html.erb
+++ b/app/views/chatgpt/index.html.erb
@@ -2,7 +2,7 @@
 <h2>Restaurants</h2>
 
 <ul>
-  <% @response.each do |suggestion| %></p>
-    <li><%= suggestion[2..-1] %></li>
+  <% @suggestions.each do |suggestion| %></p>
+    <li><%= suggestion %></li>
   <% end %>
 </ul>
