--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,8 +20,7 @@
           </li>
           <li class="nav-item dropdown">
           <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar", alt: "dropdown menu" %>
-          </a>
+           </a>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "Action", "#", class: "dropdown-item" %>
               <%= link_to "Another action", "#", class: "dropdown-item" %>
@@ -46,7 +45,7 @@
   </div>
   <img src="/assets/logo-1" alt="Spark-logo" style="width:25%;" >
 
-    <div style="margin-right: 10px;">
+  <div style="margin-right: 10px;">
     <a class="navbar-profile-icon" href="#"></a>
     <span class="user-icon" style="color: #992944;">
       <i class="fa-solid fa-user fa-lg"></i>
@@ -54,7 +53,7 @@
   </div>
 </nav>
 
-<footer>
+<footer class="footer">
   <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between">
     <div style="margin-left: 10px;">
       <%= link_to suggestions_path do %>
@@ -63,14 +62,18 @@
         </span>
       <% end %>
     </div>
+    <div>
 
       <span class="user-icon" style="color: #992944;">
         <i class="fa-solid fa-heart fa-lg"></i>
       </span>
-
-      <span class="user-icon" style="color: #992944; margin-right: 10px;">
-        <i class="fa-solid fa-magnifying-glass fa-lg"></i>
-      </span>
+    </div>
+    <div>
+      <%= link_to categories_path do %>
+        <span class="user-icon" style="color: #992944; margin-right: 10px;">
+          <i class="fa-solid fa-magnifying-glass fa-lg"></i>
+        </span>
+      <% end %>
     </div>
   </nav>
 
