--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -37,13 +37,13 @@
   </div>
 </div>
 -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between">
+<nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between fixed-top">
   <div style="margin-left: 10px;">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
   </div>
-  <img src="/assets/logo-1" alt="Spark-logo" style="width:25%;" >
+  <img src="/assets/logo-color" alt="Spark-logo" style="width:25%;" >
 
   <div style="margin-right: 10px;">
     <a class="navbar-profile-icon" href="#"></a>
@@ -54,7 +54,7 @@
 </nav>
 
 <footer class="footer">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between">
+  <nav class="navbar navbar-expand-lg fixed-bottom navbar-light bg-light d-flex justify-content-between p-4">
     <div style="margin-left: 10px;">
       <%= link_to suggestions_path do %>
         <span class="user-icon" style="color: #992944;">
