--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -1,24 +1,22 @@
-<div class="container" style="height:100%; display:flex;flex-direction:column;">
-<main style="flex:1; overflow:auto;">
-<section style="height:100%; overflow:auto;">
-    <% @suggestions.each_slice(3) do |suggestion_row| %>
-      <% suggestion_row.each do |suggestion| %>
-        <div class="card mb-3">
+<div class="container" style="margin-top: 80px">
+      <% @suggestions.each_slice(3) do |suggestion_row| %>
+        <% suggestion_row.each do |suggestion| %>
 
-          <% if suggestion.image_url.present? %>
-            <%= image_tag(suggestion.image_url, class: "card-img-top") %>
-          <% else %>
-            <%= image_tag("food-01.jpg", class: "card-img-top") %>
-          <% end %>
+          <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
 
-          <div class="card-body">
-            <h5 class="card-title"><%= suggestion.title %></h5>
-            <p class="card-text"><%= suggestion.overview %></p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <% if suggestion.image_url.present? %>
+              <%= image_tag(suggestion.image_url, class: "card-img-top") %>
+            <% else %>
+              <%= image_tag("food-01.jpg", class: "card-img-top") %>
+            <% end %>
+
+            <div class="suggestion-cards-info">
+              <h5 class="card-title" style="padding-top: 15px; font-weight: 700"><%= suggestion.title %></h5>
+              <p class="card-text"><%= suggestion.overview %></p>
+              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
           </div>
-        </div>
+
+        <% end %>
       <% end %>
-    <% end %>
-    <section>
-    <main>
 </div>
