--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 80px">
+<div class="container" style="margin-top: 70px">
       <% @suggestions.each_slice(3) do |suggestion_row| %>
         <% suggestion_row.each do |suggestion| %>
 
@@ -11,8 +11,8 @@
             <% end %>
 
             <div class="suggestion-cards-info">
-              <h5 class="card-title" style="padding-top: 15px; font-weight: 700"><%= suggestion.title %></h5>
-              <p class="card-text"><%= suggestion.overview %></p>
+              <h5 class="card-title" style="padding-top: 15px; font-weight: 700; letter-spacing: 1px;"><%= suggestion.title %></h5>
+              <p class="card-text"><i class="fa-solid fa-location-dot"></i> Amsterdam <%= suggestion.overview %></p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
