--- a/app/assets/stylesheets/components/_suggestion_cards.scss
+++ b/app/assets/stylesheets/components/_suggestion_cards.scss
@@ -1,10 +1,3 @@
-.suggestion-cards-info {
-
-  background: white;
-  color: black ;
-  padding-left: 15px;
-  padding-bottom: 15px;
-}
 
 .suggestion-cards {
   border-radius: 8px !important;
@@ -12,9 +5,22 @@
   font-family: 'Montserrat', sans-serif;
   font-family: 'Open Sans', sans-serif;
   font-family: 'Roboto', sans-serif;
-  letter-spacing: 1px;
 
 
+
+}
+
+.suggestion-cards-info {
+
+  background: white;
+  color: black ;
+  padding-left: 15px;
+  padding-bottom: 15px;
+  padding-right: 15px;
+
+  p{
+    color: rgb(96, 96, 96);
+  }
 }
 
 
