--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,14 +38,15 @@
 </div>
 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between fixed-top">
-  <div style="margin-left: 10px;">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
+  <div style="margin-left: 20px; margin-top: 5px; margin-bottom: 5px;">
+    <span><i class="fa-solid fa-bars fa-lg" style="color: #992944;"></i></span>
+     <%# <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation"> %>
+        <%# <span class="navbar-toggler-icon"></span> %>
+      <%# </button> %>
   </div>
   <img src="/assets/logo-color" alt="Spark-logo" style="width:25%;" >
 
-  <div style="margin-right: 10px;">
+  <div style="margin-right: 20px; margin-top: 5px; margin-bottom: 5px;">
     <a class="navbar-profile-icon" href="#"></a>
     <span class="user-icon" style="color: #992944;">
       <i class="fa-solid fa-user fa-lg"></i>
