changes in dashboard

--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -12,7 +12,7 @@
 
             <div class="suggestion-cards-info">
               <h5 class="card-title" style="padding-top: 15px; font-weight: 700; letter-spacing: 1px;"><%= suggestion.title %></h5>
-              <p class="card-text"><i class="fa-solid fa-location-dot"></i> Amsterdam <%= suggestion.overview %></p>
+              <p class="card-text"><i class="fa-solid fa-location-dot"></i> &nbsp; Amsterdam &nbsp; <i class="fa-solid fa-star"></i> </p>
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
