worked on suggestion show page

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 <div id="category-show-page-banner"class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-  Dining & Drinks
+  Dining
 </div>
 <div id="category-page-main">
   <div class="sub-heading-text-category">
@@ -16,6 +16,8 @@
           <p class="card_text_category_show_page">Date | Time</p>
           <p class="card_text_category_show_page">Location</p>
           <button id="category-button-show-page" class="card_btn">Explore / Read More</button>
-        </div>
+        </li>
       </div>
-    </li>
+    </div>
+  </div>
+</div>
