--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,10 +39,10 @@
 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between fixed-top">
   <div style="margin-left: 20px; margin-top: 5px; margin-bottom: 5px;">
-    <span><i class="fa-solid fa-bars fa-lg" style="color: #992944;"></i></span>
-     <%# <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation"> %>
-        <%# <span class="navbar-toggler-icon"></span> %>
-      <%# </button> %>
+    <span></span>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" >
+      <span class="navbar-toggler-icon"></span>
+    </button>
   </div>
   <img src="/assets/logo-color" alt="Spark-logo" style="width:25%;" >
 
