changes in category-index

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,24 +2,25 @@
 
   <div>
     <div class="container d-flex justify-content-center">
-      <div><button type="button" class="btn btn-outline-secondary" style="border-radius: 20px; width: 120px;">Location</button></div>
+      <div style="width:50%; align:center;"><button type="button" class="btn btn-outline-secondary" style="border-radius: 20px; width: 120px;">Location</button></div>
 
-      <div><button type="button" class="btn btn-outline-secondary" style="border-radius: 20px; width: 120px">Date/Time</button></div>
+      <div style="width:50%,align:center;"><button type="button" class="btn btn-outline-secondary" style="border-radius: 20px; width: 120px; ">Date/Time</button></div>
     </div>
-    <hr style="border: 2px solid #992944; width: 50% align: center">
+    <hr>
     <p style="text-align: center; font-size: 19px; font-weight: bold;">Browse by category</p>
+              <% color = %w[red blue green brown orange pink hotpink voilet darkturquoise darkblue] %>
     <% @categories.each_slice(2) do |categorie_row| %>
       <div class="row">
         <% categorie_row.each do |category| %>
             <div class="card category-cards" style="width: 10rem; margin:10px;">
               <div class="card-body" style="text-align:center;">
               <div>
-                <span style="color: grey;">
-                  <i class="<%= category.icon %>"></i>
+                <span>
+                  <i class="<%= category.icon %>" style="color:<%= color.sample %>"></i>
                 </span>
                 <br>
                 </div>
-                <h5 class="card-title" style="padding-top: 6px; font-size: 16px"><%= category.title %></h5>
+                <h5 class="card-title" style="padding-top: 6px; font-size: 16px; "><%= category.title %></h5>
               </div>
             </div>
         <% end %>
