--- a/app/assets/stylesheets/components/_suggestion_cards.scss
+++ b/app/assets/stylesheets/components/_suggestion_cards.scss
@@ -8,7 +8,7 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
   font-family: 'Montserrat', sans-serif;
   font-family: 'Open Sans', sans-serif;
-  font-family: 'Roboto', sans-serif;git addgit 
+  font-family: 'Roboto', sans-serif;
 
 
 }
