--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,9 +38,9 @@
 </div>
 -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between fixed-top">
-  <div style="margin-left: 20px; margin-top: 5px; margin-bottom: 5px;">
+  <div style="margin-left: 20px; margin-top: 5px; margin-bottom: 5px; margin-right: 20px">
     <span></span>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" >
+      <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
     </button>
   </div>
@@ -48,7 +48,7 @@
 
   <div style="margin-right: 20px; margin-top: 5px; margin-bottom: 5px;">
     <a class="navbar-profile-icon" href="#"></a>
-    <span class="user-icon" style="color: #992944;">
+    <span class="user-icon brand-text">
       <i class="fa-solid fa-user fa-lg"></i>
     </span>
   </div>
@@ -58,14 +58,14 @@
   <nav class="navbar navbar-expand-lg fixed-bottom navbar-light bg-light d-flex justify-content-between p-4">
     <div style="margin-left: 10px;">
       <%= link_to suggestions_path do %>
-        <span class="user-icon" style="color: #992944;">
+        <span class="user-icon brand-text">
           <i class="fa-solid fa-house fa-lg"></i>
         </span>
       <% end %>
     </div>
     <div>
 
-      <span class="user-icon" style="color: #992944;">
+      <span class="user-icon brand-text">
         <i class="fa-solid fa-heart fa-lg"></i>
       </span>
     </div>
