--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -1,6 +1,8 @@
-<div class="card bg-dark text-white" style="height: 150px;">
-  <img class="card-img" src="assets/dashboard.jpeg" alt="Card image">
-  <div class="card-img-overlay"></div>
+
+<div class="card bg-dark text-white image-container" style="height: 150px;">
+  <p class='text-dashboard'>Dashboard</p>
+   <img class="card-img" src="assets/dashboard-2.jpeg" alt="card image">
+  <div class="gradient-overlay"></div>
 </div>
 
 <div class="container" style="margin-top: 70px">
@@ -27,7 +29,7 @@
             <p class="card-text"><i class="fa-solid fa-location-dot"></i>
               <%= cities.sample %>
               &nbsp;
-              <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
+              <i class="fa-solid fa-star brand-text" style="font-size: 14px">
                 <%= rating %></i>
             </p>
           </div>
