--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,6 +14,7 @@
         <% categorie_row.each do |category| %>
             <div class="card category-cards" style="width: 10rem; margin:10px;">
               <div class="card-body" style="text-align:center;">
+              <% link_to url_for(category) %>
               <div>
                 <span>
                   <i class="<%= category.icon %>" style="color:<%= color.sample %>"></i>
