--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,19 +5,30 @@
   <div class="sub-heading-text-category">
     <p>CATEGORY</p>
   </div>
-  <ul id="category-show-page-card">
-    <li class="cards_item_category_show">
-      <div class="card_category_show_page_full_card">
-        <div class="card_image_show_category">
-          <img src="https://picsum.photos/500/300/?image=10" style="height: auto; max-width: 100%; vertical-align: middle;">
+<div class="container" style="margin-top: 20px">
+  <%# <% suggestion_id.each_slice(3) do |suggestion_row| %>
+    <%# <%  suggestion_row.each do |suggestion| %>
+      <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
+        <% if suggestion.image_url.present? %>
+          <%= image_tag(suggestion.image_url, class: "card-img-top") %>
+            <%# <i class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i> %>
+        <% else %>
+          <%= image_tag("food-01.jpg", class: "card-img-top") %>
+        <% end %>
+        <div class="suggestion-cards-info">
+          <h5
+            class="card-title"
+            style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: -1px; "
+          ><%= @suggestion.title %></h5>
+          <% cities = %w[Amsterdam Rotterdam Alkmaar Utrecht] %>
+          <% rating = [4.5, 5, 2.3, 3.1, 4.2, 5.0].sample %>
+          <div>
+            <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
+              <%= cities.sample %>
+              &nbsp;
+              <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
+                <%= rating %></i>
+            </p>
+          </div>
         </div>
-        <div class="card_content_category_show_page">
-          <h2 class="card_title_category_show_page">Spark</h2>
-          <p class="card_text_category_show_page">Date | Time</p>
-          <p class="card_text_category_show_page">Location</p>
-          <button id="category-button-show-page" class="card_btn">Explore / Read More</button>
-        </li>
       </div>
-    </div>
-  </div>
-</div>
