--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -7,8 +7,8 @@
 
 <div class="container" style="margin-top: 70px">
 
-  <% @suggestions.each_slice(3) do |suggestion_row| %>
-    <% suggestion_row.each do |suggestion| %>
+  <% @suggestions.each do |suggestion| %>
+    <%= link_to suggestion_path(suggestion), class: 'text-decoration-none text-dark' do %>
 
       <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
 
@@ -25,10 +25,12 @@
           ><%= suggestion.title %></h5>
           <% cities = %w[Amsterdam Rotterdam Alkmaar Utrecht] %>
           <% rating = suggestion.rating %>
+          <% type = suggestion.sub_category %>
           <div>
             <p class="card-text"><i class="fa-solid fa-location-dot"></i>
               <%= cities.sample %>
               &nbsp;
+              <%= type %>
               <i class="fa-solid fa-star brand-text" style="font-size: 14px">
                 <%= rating %></i>
             </p>
