--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,34 +1,42 @@
 <div id="category-show-page-banner"class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
   Dining
 </div>
+
 <div id="category-page-main">
-  <div class="sub-heading-text-category">
-    <p>CATEGORY</p>
-  </div>
-<div class="container" style="margin-top: 20px">
-  <%# <% suggestion_id.each_slice(3) do |suggestion_row| %>
-    <%# <%  suggestion_row.each do |suggestion| %>
-      <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
-        <% if suggestion.image_url.present? %>
-          <%= image_tag(suggestion.image_url, class: "card-img-top") %>
+  <div class="container" style="margin-top: 20px">
+
+    <%= @suggestions.each do |suggestion| %>
+      <%= link_to suggestion_path(suggestion), class: 'text-decoration-none text-dark' do %>
+        <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
+
+          <% if suggestion.images.present? %>
+            <%= image_tag(suggestion.images[0], class: "card-img-top") %>
             <%# <i class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i> %>
-        <% else %>
-          <%= image_tag("food-01.jpg", class: "card-img-top") %>
-        <% end %>
-        <div class="suggestion-cards-info">
-          <h5
-            class="card-title"
-            style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: -1px; "
-          ><%= @suggestion.title %></h5>
-          <% cities = %w[Amsterdam Rotterdam Alkmaar Utrecht] %>
-          <% rating = [4.5, 5, 2.3, 3.1, 4.2, 5.0].sample %>
-          <div>
-            <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
-              <%= cities.sample %>
-              &nbsp;
-              <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
-                <%= rating %></i>
-            </p>
+          <% else %>
+            <%= image_tag("food-01.jpg", class: "card-img-top") %>
+          <% end %>
+
+          <div class="suggestion-cards-info">
+            <h5
+                class="card-title"
+                style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: -1px; "
+              ><%= suggestion.title %></h5>
+            <% cities = %w[Amsterdam Rotterdam Alkmaar Utrecht] %>
+            <% rating = suggestion.rating %>
+            <% type = suggestion.sub_category %>
+            <div>
+              <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
+                <%= cities.sample %>
+                &nbsp;
+                <%= type %>
+                <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
+                  <%= rating %></i>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
+      <% end %>
+    <% end %>
+
+  </div>
+</div>
