--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -6,8 +6,8 @@
   <%# <% suggestion_id.each_slice(3) do |suggestion_row| %>
     <%# <%  suggestion_row.each do |suggestion| %>
       <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
-        <% if @suggestion.image_url.present? %>
-          <%= image_tag(@suggestion.image_url, class: "card-img-top") %>
+        <% if @suggestion.images.present? %>
+          <%= image_tag(@suggestion.images[0], class: "card-img-top") %>
             <%# <i class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i> %>
         <% else %>
           <%= image_tag("food-01.jpg", class: "card-img-top") %>
@@ -18,11 +18,13 @@
             style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: -1px; "
           ><%= @suggestion.title %></h5>
           <% cities = %w[Amsterdam Rotterdam Alkmaar Utrecht] %>
-          <% rating = [4.5, 5, 2.3, 3.1, 4.2, 5.0].sample %>
+          <% rating = @suggestion.rating %>
+          <% type = @suggestion.sub_category %>
           <div>
             <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
               <%= cities.sample %>
               &nbsp;
+              <%= type %>
               <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
                 <%= rating %></i>
                 <p>Description:</p>
@@ -31,7 +33,7 @@
           </div>
         </div>
       </div>
-  
+
   <!-- Working on this code - Sophia
     <% if user_signed_in? %>
       <% if @suggestion.favorited?(current_user) == true %>
