--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -31,7 +31,7 @@
       darkblue
     ] %>
     <div class="row justify-content-around" style="margin-left: 30px; margin-right: 30px; ">
-      <% @categories.each do |category| %>
+      <% @categories.each_with_index do |category, index| %>
         <div class='card category-cards col-5 mb-3 text-center py-3'>
           <%= link_to category_path(category), class: 'text-decoration-none text-dark pt-2' do %>
               <i class="<%= category.icon %>" style="color:<%= colors[index] %>"></i>
