--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -44,7 +44,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   </div>
-  <img src="/assets/logo-color" alt="Spark-logo" style="width:25%;" >
+  <img src="/assets/logo-color.png" alt="Spark-logo" style="width:25%;" >
 
   <div style="margin-right: 20px; margin-top: 5px; margin-bottom: 5px;">
     <a class="navbar-profile-icon" href="#"></a>
