--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -1,5 +1,5 @@
 <div class="card bg-dark text-white" style="height: 150px;">
-  <img class="card-img" src="assets/dashboard.jpeg" alt="Card image">
+  <%= image_tag("dashboard.jpeg", class: "card-img", alt: "Card image") %>
   <div class="card-img-overlay"></div>
 </div>
 <div class="container" style="margin-top: 20px">
@@ -12,7 +12,7 @@
         <% else %>
           <%= image_tag("food-01.jpg", class: "card-img-top") %>
         <% end %>
-        <div class="suggestion-cards-info">
+      <div class="suggestion-cards-info">
           <h5
             class="card-title"
             style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: -1px; "
