--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -2,7 +2,7 @@
   <p class='text-dashboard' style="position: absolute; left: 50%; top: 134px; transform: translate(-50%); z-index: 1000; font-weight: 700; font-size: 28px; color: white; text-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px;">Your Sparks</p>
   <div class="card bg-dark text-white image-container" style="height: 150px;">
 
-    <img class="card-img" src="assets/dashboard-2.jpeg" alt="card image">
+    <%= image_tag("dashboard-2.jpeg", class: "card-img", alt: "Card image") %>
     <div class="gradient-overlay"></div>
   </div>
 </div>
@@ -12,7 +12,7 @@
       <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
         <% if suggestion.images.present? %>
           <%= image_tag(suggestion.images[0], class: "card-img-top") %>
-        
+
         <% else %>
           <%= image_tag("food-01.jpg", class: "card-img-top") %>
         <% end %>
