--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<!-- 
+<!--
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
@@ -32,6 +32,7 @@
     <div class="col-md-4 border-right">   <!-- class= " col-md-4 border-right "    -->
       <div class="d-flex flex-column align-items-center text-center p-3 py-5">
         <img class="avatar-extra-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+        <%= image_tag("profile-marius.jpg", class: "avatar-extra-large", alt: "Avatar large") %>
         <span class="font-weight-bold">first name, last name</span>
         <span class="text-black-50">user's email</span>
         <span>user's location</span>
@@ -51,7 +52,7 @@
           <div class="col-md-6 p-3"><input type="text" class="form-control" value="phone number" placeholder="Phone number"></div>
         </div>
         <div class="mt-1 d-flex flex-column align-items-center">
-          <%# <%= link_to edit_user_registration_path do %> 
+          <%# <%= link_to edit_user_registration_path do %>
             <button class="btn btn-primary profile-button align-items-center" type="button">Save Profile</button>
         </div>
             <%# <%= link_to edit_user_registration_path, data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %>
