--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -2,7 +2,7 @@
   <p class='text-dashboard' style="position: absolute; left: 50%; top: 134px; transform: translate(-50%); z-index: 1000; font-weight: 700; font-size: 28px; color: white; text-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px;">Your Sparks</p>
   <div class="card bg-dark text-white image-container" style="height: 150px;">
 
-    <%= image_tag("dashboard-2.jpeg", class: "card-img", alt: "Card image") %>
+    <%= image_tag("assets/dashboard-2.jpeg", class: "card-img", alt: "Card image") %>
     <div class="gradient-overlay"></div>
   </div>
 </div>
@@ -14,7 +14,7 @@
           <%= image_tag(suggestion.images[0], class: "card-img-top") %>
 
         <% else %>
-          <%= image_tag("food-01.jpg", class: "card-img-top") %>
+          <%= image_tag("assets/food-01.jpg", class: "card-img-top") %>
         <% end %>
         <div class="suggestion-cards-info">
           <h5
