--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -31,8 +31,7 @@
   <div class="row">      <!-- class= "row-->
     <div class="col-md-4 border-right">   <!-- class= " col-md-4 border-right "    -->
       <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-        <img class="avatar-extra-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
-        <%= image_tag("profile-marius.jpg", class: "avatar-extra-large", alt: "Avatar large") %>
+        <%= image_tag("assets/profile-marius.jpg", class: "avatar-extra-large", alt: "Avatar large") %>
         <span class="font-weight-bold">first name, last name</span>
         <span class="text-black-50">user's email</span>
         <span>user's location</span>
