--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -1,5 +1,5 @@
 <div class="card bg-dark text-white" style="height: 150px;">
-  <%= image_tag("assets/dashboard.jpeg", class: "card-img", alt: "Card image") %>
+  <%= image_tag("dashboard.jpeg", class: "card-img", alt: "Card image") %>
   <div class="card-img-overlay"></div>
 </div>
 <div class="container" style="margin-top: 20px">
@@ -10,7 +10,7 @@
           <%= image_tag(@suggestion.images[0], class: "card-img-top") %>
             <%# <i class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i> %>
         <% else %>
-          <%= image_tag("assets/food-01.jpg", class: "card-img-top") %>
+          <%= image_tag("food-01.jpg", class: "card-img-top") %>
         <% end %>
       <div class="suggestion-cards-info">
           <h5
