seeds partially done

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -19,16 +19,15 @@
     <hr>
     <p style="text-align: center; font-size: 19px; font-weight: bold;">Categories</p>
     <% colors = %w[
-      red
-      blue
+      darkred
+      darkblue
       green
       brown
       orange
-      pink
+      turquoise
       hotpink
       voilet
       darkturquoise
-      darkblue
     ] %>
     <div class="row justify-content-around" style="margin-left: 30px; margin-right: 30px; ">
       <% @categories.each_with_index do |category, index| %>
