--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -1,18 +1,17 @@
 <div class="cover">
   <p class='text-dashboard' style="position: absolute; left: 50%; top: 134px; transform: translate(-50%); z-index: 1000; font-weight: 700; font-size: 28px; color: white; text-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px;">FOR YOU</p>
   <div class="card bg-dark text-white image-container" style="height: 150px;">
-
     <%= image_tag("dashboard-2.jpeg", class: "card-img", alt: "Card image") %>
     <div class="gradient-overlay"></div>
   </div>
 </div>
+
 <div class="container" style="margin-top: 70px">
   <% @suggestions.each do |suggestion| %>
     <%= link_to suggestion_path(suggestion), class: 'text-decoration-none text-dark' do %>
       <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
         <% if suggestion.images.present? %>
           <%= image_tag(suggestion.images[0], class: "card-img-top") %>
-
         <% else %>
           <%= image_tag("food-01.jpg", class: "card-img-top") %>
         <% end %>
@@ -21,16 +20,14 @@
             class="card-title"
             style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: -1px; "
           ><%= suggestion.title %></h5>
-          <% cities = %w[Amsterdam Rotterdam Alkmaar Utrecht] %>
-          <% rating = suggestion.rating %>
-          <% type = suggestion.sub_category %>
           <div>
             <p class="card-text"><i class="fa-solid fa-location-dot"></i>
-              <%= cities.sample %>
+              <%= suggestion.city %>
               &nbsp;
-              <%= type %>
+              <%= suggestion.sub_category %>
+              &nbsp;
               <i class="fa-solid fa-star brand-text" style="font-size: 14px">
-                <%= rating %></i>
+                <%= suggestion.rating %></i>
             </p>
           </div>
         </div>
