--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -2,37 +2,35 @@
   <%= image_tag("dashboard.jpeg", class: "card-img", alt: "Card image") %>
   <div class="card-img-overlay"></div>
 </div>
+
 <div class="container" style="margin-top: 20px">
-  <%# <% suggestion_id.each_slice(3) do |suggestion_row| %>
-    <%# <%  suggestion_row.each do |suggestion| %>
-      <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
-        <% if @suggestion.images.present? %>
-          <%= image_tag(@suggestion.images[0], class: "card-img-top") %>
-            <%# <i class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i> %>
-        <% else %>
-          <%= image_tag("food-01.jpg", class: "card-img-top") %>
-        <% end %>
-      <div class="suggestion-cards-info">
-          <h5
+  <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
+    <% if @suggestion.images.present? %>
+      <%= image_tag(@suggestion.images[0], class: "card-img-top") %>
+      <%# <i class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i> %>
+    <% else %>
+      <%= image_tag("food-01.jpg", class: "card-img-top") %>
+    <% end %>
+    <div class="suggestion-cards-info">
+      <h5
             class="card-title"
             style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: -1px; "
           ><%= @suggestion.title %></h5>
-          <% cities = %w[Amsterdam Rotterdam Alkmaar Utrecht] %>
-          <% rating = @suggestion.rating %>
-          <% type = @suggestion.sub_category %>
-          <div>
-            <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
-              <%= cities.sample %>
-              &nbsp;
-              <%= type %>
-              <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
-                <%= rating %></i>
-                <p>Description:</p>
-              <p> <%= @suggestion.overview %> </p>
-            </p>
-          </div>
-        </div>
+      <div>
+        <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
+          <%= @suggestion.city %>
+          &nbsp;
+          <%= @suggestion.sub_category %>
+          &nbsp;
+          <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
+            <%= @suggestion.rating %></i>
+          <p>Description:</p>
+          <p> <%= @suggestion.overview %> </p>
+        </p>
       </div>
+    </div>
+  </div>
+</div>
 
   <!-- Working on this code - Sophia
     <% if user_signed_in? %>
