--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -7,31 +7,29 @@
 </div>
 
 <div class="container" style="margin-top: 70px">
-  <% @suggestions.each do |suggestion| %>
-    <%= link_to suggestion_path(suggestion), class: 'text-decoration-none text-dark' do %>
-      <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
-        <% if suggestion.images.present? %>
-          <%= image_tag(suggestion.images[0], class: "card-img-top") %>
-        <% else %>
-          <%= image_tag("food-01.jpg", class: "card-img-top") %>
-        <% end %>
-        <div class="suggestion-cards-info">
-          <h5
-            class="card-title"
-            style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: -1px; "
-          ><%= suggestion.title %></h5>
-          <div>
-            <p class="card-text"><i class="fa-solid fa-location-dot"></i>
-              <%= suggestion.city %>
-              &nbsp;
-              <%= suggestion.sub_category %>
-              &nbsp;
-              <i class="fa-solid fa-star brand-text" style="font-size: 14px">
-                <%= suggestion.rating %></i>
-            </p>
-          </div>
+  <%= link_to suggestion_path(@my_suggestion), class: 'text-decoration-none text-dark' do %>
+    <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
+      <% if @my_suggestion.images.present? %>
+        <%= image_tag(@my_suggestion.images[0], class: "card-img-top") %>
+      <% else %>
+        <%= image_tag("food-01.jpg", class: "card-img-top") %>
+      <% end %>
+      <div class="suggestion-cards-info">
+        <h5
+          class="card-title"
+          style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: -1px; "
+        ><%= @my_suggestion.title %></h5>
+        <div>
+          <p class="card-text"><i class="fa-solid fa-location-dot"></i>
+            <%= @my_suggestion.city %>
+            &nbsp;
+            <%= @my_suggestion.sub_category %>
+            &nbsp;
+            <i class="fa-solid fa-star brand-text" style="font-size: 14px">
+              <%= @my_suggestion.rating %></i>
+          </p>
         </div>
       </div>
-    <% end %>
+    </div>
   <% end %>
 </div>
