--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -8,7 +8,7 @@
       <%= link_to suggestion_path(suggestion), class: 'text-decoration-none text-dark' do %>
         <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
           <% if suggestion.images.present? %>
-            <%= image_tag(suggestion.images[0], class: "card-img-top") %>
+            <%= image_tag(suggestion.images[0], class: "card-img-top", style: "max-height: 250px") %>
             <%# <i class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i> %>
           <% else %>
             <%= image_tag("food-01.jpg", class: "card-img-top") %>
