--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -1,10 +1,9 @@
-
 <%# <div class="card bg-dark text-white" style="height: 150px;">
   <img class="card-img" src="assets/dashboard.jpeg" alt="Card image">
   <div class="card-img-overlay"></div>
 </div> %>
-<%# <style> %>
-<%# /* .marker { */
+  <%# <style> %>
+  <%# /* .marker { */
 /*    background-image: asset-url('logo.png');
   background-size: cover;
   width: 50px;
@@ -12,61 +11,88 @@
   border-radius: 50%;
   cursor: pointer;
 } */ %>
-<%# </style> %>
-<%# <style>
+    <%# </style> %>
+    <%# <style>
 body { margin: 0; padding: 0; }
 #map { position: absolute; width: 100%; height: 300px }
 </style> %>
 
-
-<div class="card bg-dark text-white" style="height: 150px;">
-  <%= image_tag("dashboard.jpeg", class: "card-img", alt: "Card image") %>
-  <div class="card-img-overlay"></div>
-</div>
-
-<div class="container" style="margin-top: 20px">
-  <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
-    <% if @suggestion.images.present? %>
-      <%= image_tag(@suggestion.images[0], class: "card-img-top", style: "max-height: 250px") %>
-      <%# <i class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i> %>
-    <% else %>
-      <%= image_tag("food-01.jpg", class: "card-img-top") %>
-    <% end %>
-    <div class="suggestion-cards-info">
-      <h5
-            class="card-title"
-            style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: -1px; "
-          ><%= @suggestion.title %></h5>
-      <div>
-        <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
-          <%= @suggestion.city %>
-          &nbsp;
-          <%= @suggestion.sub_category %>
-          &nbsp;
-          <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
-            <%= @suggestion.rating %></i>
-          <p>Description:</p>
-          <p> <%= @suggestion.overview %> </p>
-        </p>
+      <div class="card bg-dark text-white" style="height: 150px;">
+        <%= image_tag("dashboard.jpeg", class: "card-img", alt: "Card image") %>
+        <div class="card-img-overlay"></div>
       </div>
-    </div>
-  </div>
 
-  <div id="map" style="margin-top:500px;position: absolute; top: 0; bottom: 0; max-height:400px; width: 100%;z-index:100;">
-  <span class="d-none" id="coordinates" data-longitude="<%= @suggestion.longitude %>" data-latitude="<%= @suggestion.latitude %>"></span>
+      <div class="container" style="margin-top: 20px">
+        <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
+          <% if @suggestion.images.present? %>
+            <%= image_tag(
+              @suggestion.images[0],
+              class: "card-img-top",
+              style: "max-height: 250px"
+            ) %>
+            <%# <i class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i> %>
+          <% else %>
+            <%= image_tag("food-01.jpg", class: "card-img-top") %>
+          <% end %>
+          <div class="suggestion-cards-info">
+            <h5
+              class="card-title"
+              style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px; "
+            ><%= @suggestion.title %></h5>
+            <div>
+              <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
+                <%= @suggestion.city %>
+                &nbsp;
+                <%= @suggestion.sub_category %>
+                &nbsp;
+                <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
+                  <%= @suggestion.rating %></i>
+                <p class="pt-0 pb-0 mb-0">Description:</p>
+                <p>
+                  <%= @suggestion.overview %>
+                </p>
+              </p>
 
-</div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
+          <div class="suggestion-cards-info">
+            <h5
+              class="card-title"
+              style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px; "
+            >Location</h5>
+            <p> Address: <span id="address"> </span> </p>
+            <div style="min-height:250px; margin-bottom:5px; z-index:0;">
+              <div
+                id="map"
+                style="position: relative; top: 15; width: 100%; min-height: 200px;"
+              >
+                <span
+                  class="d-none"
+                  id="coordinates"
+                  data-longitude="<%= @suggestion.longitude %>"
+                  data-latitude="<%= @suggestion.latitude %>"
+                ></span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<script>
+      <script>
   const coordinates = document.getElementById('coordinates');
-  mapboxgl.accessToken = 'pk.eyJ1IjoicHJhY2hpMjUiLCJhIjoiY2xtM3Q1N2lyNDY0bTNxdGh1eG1vMW94MCJ9.eRtL5A5z0SDvt0ViEDskCw';
+    const addressElement = document.getElementById('address');
+
+  accessToken=  'pk.eyJ1IjoicHJhY2hpMjUiLCJhIjoiY2xtM3Q1N2lyNDY0bTNxdGh1eG1vMW94MCJ9.eRtL5A5z0SDvt0ViEDskCw';
+  mapboxgl.accessToken = accessToken;
   console.log(coordinates.dataset.longitude)
   const map = new mapboxgl.Map({
   container: 'map',
   // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
   style: 'mapbox://styles/mapbox/streets-v12',
   center: [coordinates.dataset.longitude, coordinates.dataset.latitude],
-  zoom: 20
+  zoom: 15
 });
 
 
@@ -74,15 +100,26 @@ body { margin: 0; padding: 0; }
   .setLngLat([coordinates.dataset.longitude, coordinates.dataset.latitude])
    .addTo(map);
 
+   const apiUrl = `https://api.mapbox.com/geocoding/v5/mapbox.places/${coordinates.dataset.longitude},${coordinates.dataset.latitude}.json?access_token=${accessToken}`;
+    // Make a GET request to the API
+fetch(apiUrl)
+    .then(response => response.json())
+    .then(data => {
+        if (data.features && data.features.length > 0) {
+            const firstFeature = data.features[0];
+            const address = firstFeature.place_name;
+            addressElement.textContent = address;
+        } else {
+            addressElement.textContent = 'Address not found';
+        }
+    })
+    .catch(error => {
+        console.error('Error fetching address:', error);
+        addressElement.textContent = 'Error fetching address';
+    });
+    </script>
 
-
-
-</script>
-
-
-
-
-<%# // Add the control to the map.
+      <%# // Add the control to the map.
 // map.addControl(
 // new MapboxGeocoder({
 // accessToken: mapboxgl.accessToken,
