--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -40,7 +40,7 @@ body { margin: 0; padding: 0; }
               style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px; "
             ><%= @suggestion.title %></h5>
             <div>
-              <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
+              <p class="card-text"><i class="fa-solid fa-location-dot"></i>
                 <%= @suggestion.city %>
                 &nbsp;
                 <%= @suggestion.sub_category %>
