--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,41 @@
-<h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<div id="container-new-user-page" class="container-fluid pt-8">
+  <div class="sign-up-page-title">
+    <h2>Sign up</h2>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-  </div>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
+      <div id="sign-up-form-preferences" class="form-inputs pt-5">
+      <%= f.input :photo, as: :file %>
+      <%= f.input :first_name,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "first_name" }%>
+        <%= f.input :last_name,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "last_name" }%>
+        <%= f.input :email,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "email" }%>
+        <%= f.input :password,
+                    required: true,
+                    hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    required: true,
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :preferences, as: :check_boxes, collection: ['Adventure & Active', 'Outdoor & Nature', 'Entertainment & Cultural', 'Relaxation & Wellness', 'Romantic', 'Unique', 'French', 'American', 'Asian', 'Italian', 'Cafe', 'Coffee', 'Pubs', 'Wine', 'Cocktail'], include_hidden: false%>
+      </div>
 
-<%= render "devise/shared/links" %>
+      <div class="btn btn-ghost">
+        <%= f.button :submit, "Sign up" %>
+      </div>
+      
+    <% end %>
+
+    <%= render "devise/shared/links" %>
+ </div>
