--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -2,15 +2,33 @@
   <%= image_tag("dashboard.jpeg", class: "card-img", alt: "Card image") %>
   <div class="card-img-overlay"></div>
 </div>
-
 <div class="container" style="margin-top: 20px">
   <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
-    <% if @suggestion.images.present? %>
-      <%= image_tag(@suggestion.images[0], class: "card-img-top") %>
-      <%# <i class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i> %>
-    <% else %>
-      <%= image_tag("food-01.jpg", class: "card-img-top") %>
-    <% end %>
+    <div>
+      <% if @suggestion.images.present? %>
+        <%= image_tag(@suggestion.images[0], class: "card-img-top", id: "img-fav") %>
+      <% else %>
+        <%= image_tag("food-01.jpg", class: "card-img-top") %>
+      <% end %>
+
+      <div>
+        <% if current_user %>
+          <% if current_user.favorites.where(suggestion: @suggestion).empty? %>
+            <%= simple_form_for [@suggestion, @favorite] do |f| %>
+              <%= f.button :button do %>
+                <i id="heart" class="fa-regular fa-heart fa-xl"></i>
+              <% end %>
+            <% end %>
+          <% else %>
+            <%= link_to favorite_path(current_user.favorites.where(suggestion: @suggestion).first), data: {turbo_method: :delete} do %>
+              <i id="heart" class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i>
+            <% end %>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+
+
     <div class="suggestion-cards-info">
       <h5
             class="card-title"
@@ -31,22 +49,3 @@
     </div>
   </div>
 </div>
-
-  <!-- Working on this code - Sophia
-    <% if user_signed_in? %>
-      <% if @suggestion.favorited?(current_user) == true %>
-        <i class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i>
-        <div class="flash flash-success alert alert-dismissible fade show" role="alert">
-          <span>Favorited to your Sparks</span>
-          <a data-bs-dismiss="alert" aria-label="Close">
-            <i class="fas fa-times"></i>
-          </a>
-        </div>
-      <% else %>
-        <%= link_to favorite_create_path(@suggestion), method: :post do %>
-          <i class="fa-regular fa-heart" style="color: #ea3434;"></i>
-        <%end%>
-      <% end %>
-    <% end %>
-    </div>
--->
