--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,9 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <%= javascript_importmap_tags %>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
-
   </head>
 
   <body>
@@ -20,8 +19,8 @@
     <%= render "shared/flashes" %>
 
     <%= yield %>
-    <span id="openai-token" data-token="<%= "Bearer #{ENV['OPENAI_API_KEY']}" %>"></span>
     <%# <p class="notice"><%= notice %>
     <%# <p class="alert"><%= alert %>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </html>
